# GlorpEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  imgui.ini  linuxBuild.sh  macBuild.sh  winBuild.bat
assets/: Info.plist  glorp.icns
models/: Car.glb
shaders/: clouds.frag  clouds.vert  cubemap.frag  cubemap.vert  point_light.frag  point_light.vert  ps1_shader.frag  ps1_shader.vert  quad.frag  quad.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/: first_app.cpp  first_app.hpp  glorp_3D_texture.cpp  glorp_3D_texture.hpp  glorp_buffer.cpp  glorp_buffer.hpp  glorp_camera.cpp  glorp_camera.hpp  glorp_cubemap.cpp  glorp_cubemap.hpp  glorp_descriptors.cpp  glorp_descriptors.hpp  glorp_device.cpp  glorp_device.hpp  glorp_frame_info.hpp  glorp_game_object.cpp  glorp_game_object.hpp  glorp_imgui.cpp  glorp_imgui.hpp  glorp_model.cpp  glorp_model.hpp  glorp_pipeline.cpp  glorp_pipeline.hpp  glorp_renderer.cpp  glorp_renderer.hpp  glorp_swap_chain.cpp  glorp_swap_chain.hpp  glorp_texture.cpp  glorp_texture.hpp  glorp_utils.hpp  glorp_window.cpp  glorp_window.hpp  gyro_controller.cpp  gyro_controller.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp
src/systems/: cloud_render_system.cpp  cloud_render_system.hpp  cubemap_render_system.cpp  cubemap_render_system.hpp  imgui_render_system.hpp  point_light_system.cpp  point_light_system.hpp  ps1_render_system.cpp  ps1_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp
